# project8PM

./: .dockerignore  .gitignore  Dockerfile  README.md  REPRODUCIBILITY.md  __init__.py  app.py  client.py  env.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  scores.json  tasks.py  validate_submission.py
.github/workflows/: ci.yml
dataset/easy/: answers.json  cases.json  config.json  e1.py  e2.py  e3.py  e4.py  e5.py
dataset/hard/: answers.json  cases.json  config.json  h1.py  h10.py  h11.py  h12.js  h13.py  h14.js  h2.py  h3.py  h4.py  h5.py  h6.js  h7.js  h8.py  h9.py
dataset/medium/: answers.json  cases.json  config.json  m1.py  m2.py  m3.py  m4.py  m5.py  m6.py
dataset/security/: answers.json  cases.json  config.json  s1.py  s2.py  s3.py  s4.py  s5.py
server/: app.py  web_template.html
tests/: test_api_contract.py  test_env_stateful.py  test_grader_determinism.py
