[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "it-helpdesk-ops-env"
version = "2.0.0"
description = "An OpenEnv environment for IT helpdesk and security operations triage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-dotenv",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/sid0706/code-review-env"
Repository = "https://github.com/sidhesh0706/project8PM"
